--- a/ios/KunaTicker/uk.lproj/LaunchScreen.strings
+++ b/ios/KunaTicker/uk.lproj/LaunchScreen.strings
@@ -1,3 +1,3 @@
 
 /* Class = "UILabel"; text = "Kuna Ticker @ 2018 - Community App"; ObjectID = "bTp-w5-vLP"; */
-"bTp-w5-vLP.text" = "Kuna Ticker @ 2018 - Приложение от комньюнити";
+"bTp-w5-vLP.text" = "Kuna Ticker @ 2018 - Додаток від ком'юніті;
