--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,5 +19,8 @@
     },
     "notice": {
         "ripple": "If you invest your own money in Ripple, I hope you know what you do"
+    },
+    "riddle": {
+        "message": ""
     }
 }
