--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -19,5 +19,8 @@
     },
     "notice": {
         "ripple": "Якщо ти інвестуешь свої гроші у Ripple, то я сподіваюся що ти знаешь що робишь"
+    },
+    "riddle": {
+        "message": ""
     }
 }
