--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,7 @@
     "market": {
         "calculate": "Calculate",
         "order-book": "Order Book",
+        "last-trades": "Last Trades",
         "price-asset": "Price ({{asset}})",
         "amount-asset": "Amount ({{asset}})"
     },
