--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,6 +14,7 @@
     "market": {
         "calculate": "Калькулятор",
         "order-book": "Список ордеров",
+        "last-trades": "Последние сделки",
         "price-asset": "Цена ({{asset}})",
         "amount-asset": "Обьем ({{asset}})"
     },
