Some refactoring of Calculator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,9 @@
         "grouping": "Grouping",
         "none": "None"
     },
+    "calculator": {
+        "average-price": "Average Price"
+    },
     "notice": {
         "ripple": "If you invest your own money in Ripple, I hope you know what you do"
     },
