--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -23,6 +23,9 @@
         "grouping": "Групировка",
         "none": "Нема"
     },
+    "calculator": {
+        "average-price": "Средняя цена"
+    },
     "notice": {
         "ripple": "Если ты инвестируешь свои деньги в Ripple, то я надеюсь ты знаешь что делаешь"
     },
