--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -23,6 +23,9 @@
         "grouping": "Групування",
         "none": "Нема"
     },
+    "calculator": {
+        "average-price": "Середня ціна"
+    },
     "notice": {
         "ripple": "Якщо ти інвестуешь свої гроші у Ripple, то я сподіваюся що ти знаешь що робишь"
     },
