Update first screen of Kuna Ticker

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,10 @@
 {
     "menu": {
         "other": "Other",
-        "about": "About"
+        "about": "About",
+        "markets": "Markets",
+        "setting": "Setting",
+        "account": "Account"
     },
     "about": {
         "title": "About Kuna Ticker",
