Added Mobx Structure instedof base model

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,8 @@
         "about": "About",
         "markets": "Markets",
         "setting": "Setting",
-        "account": "Account"
+        "account": "Account",
+        "portfolio": "Portfolio"
     },
     "about": {
         "title": "About Kuna Ticker",
