Update Market screen / Addded KUNA Code marketplace

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,7 @@
         "markets": "Markets",
         "setting": "Setting",
         "account": "Account",
+        "kuna_code": "KUNA Code",
         "portfolio": "Portfolio"
     },
     "about": {
