--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,6 +5,7 @@
         "markets": "Рынки",
         "setting": "Настройки",
         "account": "Акаунт",
+        "kuna_code": "KUNA Code",
         "portfolio": "Портфолио"
     },
     "about": {
