--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -5,6 +5,7 @@
         "markets": "Ринки",
         "setting": "Налаштунки",
         "account": "Акаунт",
+        "kuna_code": "KUNA Code",
         "portfolio": "Портфоліо"
     },
     "about": {
