--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,7 +10,11 @@
     },
     "setting": {
         "menu": {
-            "about": "Про приложение"
+            "about": "Про приложение",
+            "kuna-code": "KUNA Code"
+        },
+        "kuna-code": {
+            "title": "Настройки маркетплейса KUNA кодов"
         }
     },
     "about": {
