Set User name and Telegram

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,7 +14,7 @@
             "kuna-code": "KUNA Code"
         },
         "kuna-code": {
-            "title": "Setting of KUNA Code Marketplace"
+            "title": "Setting of KUNA Code"
         }
     },
     "about": {
