--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,7 +14,7 @@
             "kuna-code": "KUNA Code"
         },
         "kuna-code": {
-            "title": "Настройки маркетплейса KUNA кодов"
+            "title": "Настройки KUNA кодов"
         }
     },
     "about": {
