--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -14,7 +14,7 @@
             "kuna-code": "KUNA Code"
         },
         "kuna-code": {
-            "title": "Налаштунка маркетплейсу KUNA кодів"
+            "title": "Налаштунка KUNA кодів"
         }
     },
     "about": {
