--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,6 +8,16 @@
         "kuna_code": "KUNA Code",
         "portfolio": "Портфолио"
     },
+    "general": {
+        "save": "Сохранить",
+        "update": "Обновить",
+        "delete": "Удалить",
+        "add": "Добавить",
+        "amount": "Сума",
+        "operation": "Операция",
+        "comment": "Коментарий",
+        "create": "Создать"
+    },
     "setting": {
         "menu": {
             "about": "Про приложение",
@@ -46,5 +56,20 @@
     "riddle": {
         "message": ""
     },
-    "official_kuna_chanel": "Официальный канал KUNA"
+    "official_kuna_chanel": "Официальный канал KUNA",
+    "kuna-code": {
+        "jokes": [
+            "С $20 000 до $3 000 лишь одно мгновение",
+            "Просто покупай!",
+            "Просто продавай!",
+            "Просто холди!",
+            "Хомяки - вот твоя надежда!",
+            "Святой Накамото! Что случилось с биткоином?",
+            "Покупать или не покупать? Вот в чем вопрос!",
+            "Продавать или не продавать? Вот в чем вопрос!",
+            "Холдить или не холдить? Вот в чем вопрос!",
+            "Я купил Ripple на всю свою зарплату!",
+            "Я покупал по $18 000!"
+        ]
+    }
 }
