--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -8,6 +8,16 @@
         "kuna_code": "KUNA Code",
         "portfolio": "Портфоліо"
     },
+    "general": {
+        "save": "Зберегти",
+        "update": "Оновити",
+        "delete": "Видалити",
+        "add": "Додати",
+        "amount": "Сума",
+        "operation": "Операція",
+        "comment": "Коментар",
+        "create": "Створити"
+    },
     "setting": {
         "menu": {
             "about": "Про додаток",
@@ -46,5 +56,20 @@
     "riddle": {
         "message": ""
     },
-    "official_kuna_chanel": "Офіційний канал KUNA"
+    "official_kuna_chanel": "Офіційний канал KUNA",
+    "kuna-code": {
+        "jokes": [
+            "З $20 000 до $3 000 лише одна мить",
+            "Просто купуй!",
+            "Просто продавай!",
+            "Просто холди!",
+            "Хом'яки - це твоя надія!",
+            "Святий Накамото! Що трапилося з біткоїном?",
+            "Купувати чи не купувати? Ось у чому питання!",
+            "Продавати чи не продавати? Ось у чому питання!",
+            "Холдити чи не холдити? Ось у чому питання!",
+            "Я купив Ripple на усю свою зарплатню!",
+            "Я купував по $18 000!"
+        ]
+    }
 }
