Add message about fee / Fix chars

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,6 +14,8 @@
         "delete": "Удалить",
         "add": "Добавить",
         "amount": "Сума",
+        "buy": "Покупка",
+        "sell": "Продажа",
         "operation": "Операция",
         "comment": "Коментарий",
         "create": "Создать",
@@ -65,6 +67,10 @@
         "offer-title": "Заявка на KUNA код",
         "buy": "Покупаю",
         "sell": "Продаю",
+        "no-fee": "Без комисии",
+        "you-pay": "Вы доплачиваете {value}",
+        "taker-pay": "Вам сверху +{value}",
+        "maker-pay": "Вам сверху +{value}",
         "open-settings": "Открыть настройки",
         "enter-amount": "Укажите суму",
         "errors": {
