--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -14,6 +14,8 @@
         "delete": "Видалити",
         "add": "Додати",
         "amount": "Сума",
+        "buy": "Купую",
+        "sell": "Продаю",
         "operation": "Операція",
         "comment": "Коментар",
         "create": "Створити",
@@ -67,6 +69,10 @@
         "sell": "Продаю",
         "open-settings": "Відкрити налаштунки",
         "enter-amount": "Вкажіть суму",
+        "no-fee": "Без комісії",
+        "you-pay": "Ви доплачуєте {value}",
+        "taker-pay": "Вам доплачують +{value}",
+        "maker-pay": "Вам доплачують +{value}",
         "errors": {
             "name-and-telegram": "Please, setup your Display name and Telegram",
             "name": "Please, setup your Display name",
