--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,8 @@
         "delete": "Delete",
         "add": "Add",
         "amount": "Amount",
+        "buy": "Buy",
+        "sell": "Sell",
         "operation": "Operation",
         "comment": "Comment",
         "create": "Create",
@@ -65,6 +67,10 @@
         "offer-title": "KUNA Code Offer",
         "buy": "Buy",
         "sell": "Sell",
+        "no-fee": "No fee",
+        "you-pay": "You pay {value}",
+        "taker-pay": "Taker pays {value}",
+        "maker-pay": "Maker pays {value}",
         "open-settings": "Open settings",
         "enter-amount": "Enter your amount",
         "errors": {
