--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -26,7 +26,7 @@
         "menu": {
             "about": "Про приложение",
             "kuna-code": "KUNA Code",
-            "rate-app": "Зацени приложение"
+            "rate-app": "Зацени KUNA тикер"
         },
         "kuna-code": {
             "title": "Настройки KUNA кодов"
