--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -26,7 +26,7 @@
         "menu": {
             "about": "Про додаток",
             "kuna-code": "KUNA Code",
-            "rate-app": "Заціни аплікуху"
+            "rate-app": "Заціни KUNA тікер"
         },
         "kuna-code": {
             "title": "Налаштунки KUNA кодів"
