--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -111,5 +111,8 @@
             "Я купил Ripple на всю свою зарплату!",
             "Я покупал по $18 000!"
         ]
+    },
+    "choose-coin": {
+        "title": "Выберите валюту"
     }
 }
