--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -111,5 +111,8 @@
             "Я купив Ripple на усю свою зарплатню!",
             "Я купував по $18 000!"
         ]
+    },
+    "choose-coin": {
+        "title": "Виберіть валюту"
     }
 }
