--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
     "menu": {
         "other": "Other",
+        "dashboard": "Dashboard",
         "about": "About",
         "markets": "Markets",
         "setting": "Setting",
