--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,6 +1,7 @@
 {
     "menu": {
         "other": "Другое",
+        "dashboard": "Дешбор",
         "about": "О тикере",
         "markets": "Рынки",
         "setting": "Настройки",
