--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,6 +1,7 @@
 {
     "menu": {
         "other": "Інше",
+        "dashboard": "Дешбор",
         "about": "Про тікер",
         "markets": "Ринки",
         "setting": "Налаштунки",
