--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -26,6 +26,7 @@
         "ask": "Попит"
     },
     "setting": {
+        "topic": "Налаштунки",
         "menu": {
             "about": "Про додаток",
             "kuna-code": "KUNA Code",
